--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/psicuidar/browser",
+            "outputPath": "dist/psicuidar",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": ["zone.js"],
