Incluindo baseHref no json

--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,7 @@
           },
           "configurations": {
             "production": {
+              "baseHref": "/psicuidar/",
               "budgets": [
                 {
                   "type": "initial",
