--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --configuration=production --base-href=/psicuidar/",
-    "ghpages": "angular-cli-ghpages --dir=dist/psicuidar",
-    "deploy": "npm run build && npm run ghpages",
-    "watch": "ng build --watch --configuration=development",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
   "private": true,
